--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,3 +5,6 @@
 		<%= link_to user.email, user_path(user) %>
 	</p>
 <% end %>
+
+<button id="button_index">Get All Data</button>
+<div id="data_index"></div>
