--- a/app/views/crashes/index.html.erb
+++ b/app/views/crashes/index.html.erb
@@ -1,11 +1,18 @@
 <h3>Crashes Index</h3>
-
-<% @crashes.each do |crash| %>
-	<p>
-		<%= crash.date_time %>
-		<%= link_to crash.location_address, crash_path(crash) %>
-	</p>
-<% end %>
-
-<button id="button_index">Get All Crashes</button>
+<button id="button_index">Get All Crashes</button><br>
+<hr>
+Crashes day counts
+<hr>
+<div class="stats1">
+	<div id="mon"></div>
+	<div id="tue"></div>
+	<div id="wed"></div>
+	<div id="thu"></div>
+	<div id="fri"></div>
+	<div id="sat"></div>
+	<div id="sun"></div>
+</div>
+<hr>
+Index of crashes 2015
+<hr>
 <div id="data_index"></div>
