add bootstrap style; get day_counts button working

--- a/app/views/crashes/index.html.erb
+++ b/app/views/crashes/index.html.erb
@@ -1,7 +1,7 @@
 <h3>Crashes Index</h3>
-<button id="button_index">Get All Crashes</button><br>
 <hr>
-Crashes day counts
+<h3>Crashes day counts</h3>
+<button id="day_counts">Get crash day counts</button><br>
 <hr>
 <div class="stats1">
 	<div id="mon"></div>
@@ -13,6 +13,7 @@ Crashes day counts
 	<div id="sun"></div>
 </div>
 <hr>
-Index of crashes 2015
+<h3>Index of crashes 2015</h3>
+<button id="button_index">Get crashes index</button><br>
 <hr>
 <div id="data_index"></div>
