index, day_count, gender_count, working with ajax

--- a/app/views/crashes/index.html.erb
+++ b/app/views/crashes/index.html.erb
@@ -2,6 +2,7 @@
 <hr>
 <h3>Crashes day counts</h3>
 <button id="day_counts">Get crash day counts</button><br>
+
 <hr>
 <div class="stats1">
 	<div id="mon"></div>
@@ -12,8 +13,18 @@
 	<div id="sat"></div>
 	<div id="sun"></div>
 </div>
+
+<hr>
+<h3>Crashes by gender</h3>
+<button id="gender_counts">Get crash gender counts</button><br>
+<div class="gender">
+	<div id="male"></div>
+	<div id="female"></div>
+	<div id="unknown"></div>
+	<div id="blank"></div>
+</div>
+
 <hr>
 <h3>Index of crashes 2015</h3>
 <button id="button_index">Get crashes index</button><br>
-<hr>
 <div id="data_index"></div>
