add more styling / layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
-    <%= yield %>
+	<div class="container">
+		<div class="row">
+    	<%= render partial: 'layouts/navbar', locals: { crashes: @crashes } %>
+    	<%= yield %>	
+			</div>
+		</div>
   </body>
 </html>
