added image for Cambridge Open Data; removed turbolinks, javascript works 1st time upon landing; cleaned up routes, removing home page, using about instead;

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,2 +1,13 @@
 <h1>About</h1>
 <p>This project is based on public data available through Cambridge Open Data portal: </p>
+
+<p>List of crashes involving motor vehicles, bicycles and/or pedestrians reported in the City of Cambridge from January 2015 through January 2016. 
+<p>
+Any data or text that may identify specific persons or companies has been omitted. Please see attached MassTRAC documentation for additional explanation about crash reporting data elements.
+</p>
+<p>
+Note: crashes involving pedestrians are indicated in the “P1 Non Motorist Desc” and “P2 Mon Motorist Desc” columns. When using Socrata's built in visualization tools to map crashes, please use the geocoded "Location" column. The column "May involve cyclist" specifies whether a given incident may involve a bicycle operator.</p>
+
+Visit Cambridge Open Data: <br>
+
+<%= link_to image_tag("http://res.cloudinary.com/smithwebtek/image/upload/c_scale,w_376/v1493846161/crash-data-v1/camb-open-data.jpg"), "https://data.cambridgema.gov/", target: 'blank' %>
