--- a/app/views/crashes/index.html.erb
+++ b/app/views/crashes/index.html.erb
@@ -1,27 +1,32 @@
-<h3>Crashes day counts</h3>
-<button id="day_counts">Get crash day counts</button><br>
-<div class="stats1">
-	<div id="mon"></div>
-	<div id="tue"></div>
-	<div id="wed"></div>
-	<div id="thu"></div>
-	<div id="fri"></div>
-	<div id="sat"></div>
-	<div id="sun"></div>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-4 stats1">
+			<h4>Crashes day counts</h4>
+			<button id="day_counts">Get crash day counts</button><br>
+			<div id="mon"></div>
+			<div id="tue"></div>
+			<div id="wed"></div>
+			<div id="thu"></div>
+			<div id="fri"></div>
+			<div id="sat"></div>
+			<div id="sun"></div>
+		</div>
+		<div class="col-sm-4 gender">
+			<h4>Crashes by gender</h4>
+			<button id="gender_counts">Get crash gender counts</button><br>
+				<div id="male"></div>
+				<div id="female"></div>
+				<div id="unknown"></div>
+			<div id="blank"></div>		
+		</div>
+	</div>
+	<hr>
+	<div class="col-log-12">
+		<div class="row">
+			<h4>Index of crashes 2015</h4>
+			<button id="button_index">Get crashes index</button><br>
+			<div id="data_index"></div>
+		</div>
+	</div>
+	<hr>
 </div>
-<hr>
-
-<h3>Crashes by gender</h3>
-<button id="gender_counts">Get crash gender counts</button><br>
-<div class="gender">
-	<div id="male"></div>
-	<div id="female"></div>
-	<div id="unknown"></div>
-	<div id="blank"></div>
-</div>
-<hr>
-
-<h3>Index of crashes 2015</h3>
-<button id="button_index">Get crashes index</button><br>
-<div id="data_index"></div>
-<hr
