--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -9,5 +9,4 @@ Any data or text that may identify specific persons or companies has been omitte
 Note: crashes involving pedestrians are indicated in the “P1 Non Motorist Desc” and “P2 Mon Motorist Desc” columns. When using Socrata's built in visualization tools to map crashes, please use the geocoded "Location" column. The column "May involve cyclist" specifies whether a given incident may involve a bicycle operator.</p>
 
 Visit Cambridge Open Data: <br>
-
-<%= link_to image_tag("http://res.cloudinary.com/smithwebtek/image/upload/c_scale,w_376/v1493846161/crash-data-v1/camb-open-data.jpg"), "https://data.cambridgema.gov/", target: 'blank' %>
+<%= link_to image_tag("https://res.cloudinary.com/smithwebtek/image/upload/c_scale,w_376/v1493846161/crash-data-v1/camb-open-data.jpg"), "https://data.cambridgema.gov/", target: 'blank' %>
