--- a/app/views/crashes/index.html.erb
+++ b/app/views/crashes/index.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
+
 	<div class="row">
+
 		<div class="col-sm-4 stats1">
 			<h4>Crashes day counts</h4>
 			<button id="day_counts">Get crash day counts</button><br>
@@ -11,22 +13,29 @@
 			<div id="sat"></div>
 			<div id="sun"></div>
 		</div>
+
 		<div class="col-sm-4 gender">
 			<h4>Crashes by gender</h4>
 			<button id="gender_counts">Get crash gender counts</button><br>
 				<div id="male"></div>
 				<div id="female"></div>
 				<div id="unknown"></div>
-			<div id="blank"></div>		
+			<div id="blank"></div>	
+		</div>
+
+		<div class="col-sm-4">
+			<h4>Download CSV of column names</h4>
+			<button id="get_data">Get columns</button><br>
+			<div><a id="exportLink"></a></div>
+			<div id="columns"></div>	
 		</div>
 	</div>
-	<hr>
-	<div class="col-log-12">
-		<div class="row">
+
+	<div class="row">
+		<div class="col-lg-12">
 			<h4>Index of crashes 2015</h4>
 			<button id="button_index">Get crashes index</button><br>
 			<div id="data_index"></div>
 		</div>
 	</div>
-	<hr>
 </div>
