successfully imported API JSON data to postgresql db via rails and ajax

--- a/app/views/crashes/index.html.erb
+++ b/app/views/crashes/index.html.erb
@@ -2,7 +2,7 @@
 
 	<div class="row">
 
-		<div class="col-sm-4 stats1">
+		<div class="col-sm-3 stats1">
 			<h4>Crashes day counts</h4>
 			<button id="day_counts">Get crash day counts</button><br>
 			<div id="mon"></div>
@@ -14,7 +14,7 @@
 			<div id="sun"></div>
 		</div>
 
-		<div class="col-sm-4 gender">
+		<div class="col-sm-3 gender">
 			<h4>Crashes by gender</h4>
 			<button id="gender_counts">Get crash gender counts</button><br>
 				<div id="male"></div>
@@ -23,11 +23,16 @@
 			<div id="blank"></div>	
 		</div>
 
-		<div class="col-sm-4">
-			<h4>Download CSV of column names</h4>
-			<button id="get_data">Get columns</button><br>
+		<div class="col-sm-3">
+			<h4>CSV of columns</h4>
+			<button id="get_data">Download CSV</button><br>
 			<div><a id="exportLink"></a></div>
 			<div id="columns"></div>	
+		</div>
+
+		<div class="col-sm-3">
+			<h4>Import crash data</h4>
+			<button id="import_crashes">Import Crashes</button><br>
 		</div>
 	</div>
 
