--- a/app/views/crashes/show.html.erb
+++ b/app/views/crashes/show.html.erb
@@ -1,5 +1,80 @@
-<h3>UserShow</h3>
+<h3>Crash Show</h3>
+<%= @crash.ambient_light %><br>
+<%= @crash.cross_street %><br>
+<%= @crash.date_time %><br>
+<%= @crash.day_of_week %><br>
+<%= @crash.first_harmful_event %><br>
+<%= @crash.first_harmful_event_location %><br>
+<%= @crash.intersection_name_1 %><br>
+<%= @crash.intersection_name_2 %><br>
+<%= @crash.location_address %><br>
+<%= @crash.manner_of_collision %><br>
+<%= @crash.object_1 %><br>
+<%= @crash.object_2 %><br>
+<%= @crash.p1_age %><br>
+<%= @crash.p1_drivers_lic_class_1 %><br>
+<%= @crash.p1_drivers_lic_state %><br>
+<%= @crash.p1_injury %><br>
+<%= @crash.p1_role %><br>
+<%= @crash.p1_safety_system %><br>
+<%= @crash.p1_seat_position %><br>
+<%= @crash.p1_sex %><br>
+<%= @crash.p1_trapped %><br>
+<%= @crash.p1_veh_owner %><br>
+<%= @crash.p2_age %><br>
+<%= @crash.p2_drivers_lic_class_1 %><br>
+<%= @crash.p2_drivers_lic_state %><br>
+<%= @crash.p2_injury %><br>
+<%= @crash.p2_role %><br>
+<%= @crash.p2_safety_system %><br>
+<%= @crash.p2_seat_position %><br>
+<%= @crash.p2_sex %><br>
+<%= @crash.p2_trapped %><br>
+<%= @crash.road_contributing %><br>
+<%= @crash.road_surface_condition %><br>
+<%= @crash.roadway_junction_type %><br>
+<%= @crash.school_bus_related %><br>
+<%= @crash.speed_limit %><br>
+<%= @crash.street_name %><br>
+<%= @crash.street_or_intersection %><br>
+<%= @crash.traffic_control_device_type %><br>
+<%= @crash.trafficway_description %><br>
+<%= @crash.v1_action_prior_to_crash %><br>
+<%= @crash.v1_configuration %><br>
+<%= @crash.v1_driver_contribution %><br>
+<%= @crash.v1_driver_distracted %><br>
+<%= @crash.v1_first_event %><br>
+<%= @crash.v1_haz_release %><br>
+<%= @crash.v1_is_hazmat %><br>
+<%= @crash.v1_make %><br>
+<%= @crash.v1_model %><br>
+<%= @crash.v1_model_year %><br>
+<%= @crash.v1_most_damaged_area %><br>
+<%= @crash.v1_most_harmful_event %><br>
+<%= @crash.v1_occupant_count %><br>
+<%= @crash.v1_reg_year %><br>
+<%= @crash.v1_registration_type %><br>
+<%= @crash.v1_state_code %><br>
+<%= @crash.v1_trailer_reg_year %><br>
+<%= @crash.v1_underride_override %><br>
+<%= @crash.v2_action_prior_to_crash %><br>
+<%= @crash.v2_configuration %><br>
+<%= @crash.v2_driver_contribution %><br>
+<%= @crash.v2_driver_distracted %><br>
+<%= @crash.v2_emergency_response %><br>
+<%= @crash.v2_first_event %><br>
+<%= @crash.v2_haz_placard %><br>
+<%= @crash.v2_haz_release %><br>
+<%= @crash.v2_is_hazmat %><br>
+<%= @crash.v2_make %><br>
+<%= @crash.v2_model %><br>
+<%= @crash.v2_model_year %><br>
+<%= @crash.v2_most_harmful_event %><br>
+<%= @crash.v2_occupant_count %><br>
+<%= @crash.v2_reg_year %><br>
+<%= @crash.v2_registration_type %><br>
+<%= @crash.v2_state_code %><br>
+<%= @crash.v2_underride_override %><br>
+<%= @crash.weather_condition_1 %><br>
+<%= @crash.work_zone %>
 
-<%= @user.username %><br>
-<%= @user.email %><br>
-<%= @user.password %><br>
