--- a/app/views/crashes/index.html.erb
+++ b/app/views/crashes/index.html.erb
@@ -1,7 +1,5 @@
 <div class="container">
-
 	<div class="row">
-
 		<div class="col-sm-3 stats1">
 			<h4>Crashes day counts</h4>
 			<button id="day_counts">Get crash day counts</button><br>
@@ -13,7 +11,6 @@
 			<div id="sat"></div>
 			<div id="sun"></div>
 		</div>
-
 		<div class="col-sm-3 gender">
 			<h4>Crashes by gender</h4>
 			<button id="gender_counts">Get crash gender counts</button><br>
@@ -22,20 +19,17 @@
 				<div id="unknown"></div>
 			<div id="blank"></div>	
 		</div>
-
 		<div class="col-sm-3">
 			<h4>CSV of columns</h4>
 			<button id="get_data">Download CSV</button><br>
 			<div><a id="exportLink"></a></div>
 			<div id="columns"></div>	
 		</div>
-
-		<div class="col-sm-3">
+<!-- 		<div class="col-sm-3">
 			<h4>Import crash data</h4>
 			<button id="import_crashes">Import Crashes</button><br>
-		</div>
+		</div> -->
 	</div>
-
 	<div class="row">
 		<div class="col-lg-12">
 			<h4>Index of crashes 2015</h4>
