comment out csv download

--- a/app/views/crashes/index.html.erb
+++ b/app/views/crashes/index.html.erb
@@ -19,12 +19,12 @@
 				<div id="unknown"></div>
 			<div id="blank"></div>	
 		</div>
-		<div class="col-sm-3">
+<!-- 		<div class="col-sm-3">
 			<h4>CSV of columns</h4>
 			<button id="get_data">Download CSV</button><br>
 			<div><a id="exportLink"></a></div>
 			<div id="columns"></div>	
-		</div>
+		</div> -->
 <!-- 		<div class="col-sm-3">
 			<h4>Import crash data</h4>
 			<button id="import_crashes">Import Crashes</button><br>
